@@ -85,6 +85,4 @@ grep ' -o libfoo' stdout
 # The libtool command line can contain e.g. a `--tag=CC' option.
 sed 's/--tag=[^ ]*/--tag=x/g' stdout | $EGREP '(CC|LD) ' && Exit 1
 
-$MAKE distclean
-
 :
