@@ -91,7 +91,4 @@ grep ' -o ' stdout
 
 $EGREP '(F77|FC|LD) ' stdout && Exit 1
 
-$MAKE clean
-$MAKE maintainer-clean
-
 :
