@@ -1,3 +1,13 @@
+2010-11-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Avoid useless cleaning in some `silent*.test' tests.
+	* tests/silentf77.test: Removed useless calls to "make clean"
+	and "make maintainer-clean".
+	* tests/silentf90.test: Likewise.
+	* tests/silent3.test: Removed useless call to "make distclean".
+	* tests/silent4.test: Likewise.
+	* tests/silent9.test: Likewise.
+
 2010-11-19  Ian Lance Taylor  <iant@google.com>
 
 	Sync config-ml.in from GCC.
